[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/world/background/door-open.png" type="Texture" id=1]
[ext_resource path="res://assets/world/background/door-closed.png" type="Texture" id=2]
[ext_resource path="res://src/world/interactables/GameEnd.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 96 )

[node name="GameEnd" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_GameEnd_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_GameEnd_area_exited"]
